# System_Monitor

./: CMakeLists.txt  MAN.md  README.md  aise.man
experience/NON-BLOCKING/: a.out  non_blocking.c  non_blocking2.c
experience/catch_SIGTERM/: a.out  catch.c  catch2.c  catch2.c~
experience/ncurses/: ncurses  ncurses.c
experience/scroll/: scroll.c
includes/: rdtsc.h  struct_process.h  system.h  system.h~
proc/: a.out  functions.c  proc.c  system.c  system.h
server/: server  server.c
src/: a.out  functions.c  main.c  proc.c  system.c
